# CppUniCourse

./: README.md
Lab_01_02/: CMakeLists.txt
Lab_01_02/include/: approx.hpp
Lab_01_02/src/: approx.cpp  main.cpp
Lab_02_01/: main.cpp
Lab_02_02/: main.cpp
Lab_03_01/: main.cpp
Lab_03_02/: main.cpp
Lab_03_03/: main.cpp
Lab_04_01/: main.cpp
Lab_04_02/: main.cpp
Lab_04_03/: main.cpp
Lab_04_04/: main.cpp
Lab_04_05/: main.cpp
Project/: CMakeLists.txt
Project/include/model/: BankAccount.hpp
Project/src/: CMakeLists.txt  main.cpp
Project/src/model/: BankAccount.cpp
Project/tests/: CMakeLists.txt  test_bank_account.cpp
